--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -41,3 +41,11 @@ $whiteDark: #e2d8c3;
 $whiteLight: #fefefc;
 $whiteMedium: #f6f5f0;
 $whiteStroke: #e6e6e4;
+
+
+/*
+* Font Stacks
+*/
+
+$sans-serif: 'Open Sans', Helvetica, Arial, sans-serif;
+$serif: 'Matrix-Bold', Times, "Times New Roman", serif
