--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -7,7 +7,7 @@
 }
 
 html {
-  font-size: 16px;
+  font-size: 2vmin;
 }
 
 body {
@@ -42,7 +42,7 @@ text {
 .o-flex-row__item {
 
   & + & {
-    margin-left: 1rem;
+    margin-left: 0.5rem;
   }
 }
 
@@ -69,8 +69,8 @@ text {
   text-align: center;
   height: 2.5rem;
   margin-top: 0.5rem;
-  border: 2px solid;
-  border-radius: 3px;
+  border: 0.1rem solid;
+  border-radius: 0.15rem;
 }
 
 
@@ -104,7 +104,7 @@ text {
 
 .o-icon-button__label,
 .o-icon-button__icon {
-  border: 2px solid;
+  border: 0.1rem solid;
   background-color: white;
 }
 
@@ -114,7 +114,7 @@ text {
   margin-left: -1.5rem;
   padding: 0.4rem;
   padding-left: 1.7rem;
-  border-radius: 3px;
+  border-radius: 0.15rem;
 }
 
 .o-icon-button__icon {
