--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -69,6 +69,11 @@ text {
   margin-top: 0.5rem;
   border: 0.1rem solid;
   border-radius: 0.15rem;
+
+  &:focus {
+    filter: drop-shadow(0 0 0.5rem $whiteLight);
+    outline: none;
+  }
 }
 
 
