Improves touch and keyboard UX
- Disables context menu on long press and right click
- Fixes auto focus on modal when opened via touch event
- Adds key bindings for ESC and Enter to modal windows
- Adds key bindings for arrow keys to players reorder modal
- Adds key binding for Space to players remove modal
- Adds key binding for Enter to main menu and log buttons

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -95,6 +95,12 @@ text {
   display: inline-flex;
   align-items: center;
   cursor: pointer;
+
+  &:focus,
+  &:hover {
+    outline: none;
+    filter: drop-shadow(0 0 0.5rem $whiteLight)
+  }
 }
 
 .o-icon-button__label,
